solve menubar dropdown not showing dark theme

--- a/frontend/src/components/utility/navbar/Menubar.css
+++ b/frontend/src/components/utility/navbar/Menubar.css
@@ -5,7 +5,6 @@
 
 .Menubar-dropdown-content {
   display: none;
-  border-radius: 8px;
 }
 
 .Menubar-dropdown:hover .Menubar-dropdown-content {
